# JB_Project-Compliance-Sentinel

./: .env.example  .gitignore  AGENTS.md  README.md  benchmark-setup.sh  pyproject.toml
.agentshield/: policy.yaml
.cs-brain/: ablation-config.yaml  project_brain.yaml  routing-table.yaml
agents/: design-team.yaml  marketing-content-review-team.yaml  team.yaml
apps/: chainlit_app.py  streamlit_app.py
compliance-sentinel/: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  server.ts  vite.config.ts
data/: DATA_DISCLAIMER.md  jb_terms.json  law_targets.yaml  laws.json
docs/: api-reference.md  architecture.md  cross-model-verification-log.md  demo-script.md  demo-video-production-plan-v3.md  design-team-guide.md  external-integration-plan.md  external-learning-training-system.md  feature-spec.md  final-report-schema.json  jb-pdf-compliance-scorecard.md  knowledge-ingest-pipeline.md  law-open-api-setup.md  legalize-kr-optional-mirror.md  live-demo-walkthrough.md  marketing-revise-loop-design.md  memory-rag-architecture.md  module-test-checklist-2026-05-29.md  mvp-proposal.md  pdf-submission-errata.md  production-hardening-report.md  realtime-loader-langgraph-design.md  security-layers.md  submission-readiness-checklist.md  test-checklist-2026-05-28.md  test-results-2026-05-28.md  ui-feature-inventory.md  ui-guide.md  ui-spec-R1-review-permission-profile.md  ui-spec-R2-R11-dashboard-metrics.md
evals/: marketing_content_cases.jsonl  red_team_cases.jsonl
handoff/: delegation-board.md  implementation-report.md
references/: references.md
scripts/: backfill_kb_internal.py  benchmark_engine.py  efficiency_report.py  fetch_law_open_api_articles.py  memory_governance_report.py  meta_edit_guard.py  qdrant_index.py  rag_readiness_report.py  run_agentloop_gate.py  run_compare_modes.py  run_demo.py  run_three_tool_integration.py  tool_roots.py  verify_kb_placeholders.py
spec/: budget-guard-enforcement-plan.md  budget-guard-enforcement-tasks.md  budget-guard-enforcement.md  error-cascade-defense-plan.md  error-cascade-defense-tasks.md  error-cascade-defense.md  kb-ingest-100plus-plan.md  kb-ingest-100plus-tasks.md  kb-ingest-100plus.md  mcp-server-plan.md  mcp-server-tasks.md  mcp-server.md  opentelemetry-wire-plan.md  (+7 more)
(+182 files in other folders)
