[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jb-compliance-sentinel"
version = "0.1.0"
description = "JB Fin:AI Compliance Sentinel MVP"
requires-python = ">=3.10"
dependencies = ["typing_extensions>=4.8", "cryptography>=42"]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
ui = ["streamlit>=1.36", "cryptography>=42"]
dev = ["pytest>=8", "pyyaml>=6", "pytest-cov>=4", "langgraph>=0.2"]
test-integration = [
    "vcrpy>=6.0",
    "pytest-recording>=0.13",
]
llm = ["openai>=1.0", "anthropic>=0.34", "google-genai>=1.0"]
langgraph = ["langgraph>=0.2"]
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
rag = ["qdrant-client>=1.9", "sentence-transformers>=2.7"]
eval = ["deepeval>=1.0", "ragas>=0.2"]
mcp = ["mcp>=1.0"]
telemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp>=1.20"]
langsmith = ["langsmith>=0.1"]
multimodal = [
    "pdfplumber>=0.10",     # PDF 텍스트 추출 (pure Python, offline)
    "python-docx>=1.1",     # DOCX
    "openpyxl>=3.1",        # XLSX
    "striprtf>=0.0.26",     # RTF
    "beautifulsoup4>=4.12", # HTML
    "Pillow>=10.0",         # 이미지 로드 (OCR 전처리)
    "pytesseract>=0.3.10",  # OCR (tesseract 바이너리 OS 설치 필요)
]

[project.scripts]
compliance-sentinel = "compliance_sentinel.cli:main"
cs-router = "compliance_sentinel.router:main"
cs-model-router = "compliance_sentinel.model_router:main"
cs-brain = "compliance_sentinel.cs_brain:main"
cs-knowledge-ingest = "compliance_sentinel.knowledge_ingest:main"
cs-learning-lab = "compliance_sentinel.learning_lab:main"
cs-mcp-serve = "compliance_sentinel.mcp_server:main"
cs-bridge-api = "compliance_sentinel.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: pure unit tests, no external dependencies (LLM/Qdrant/network) — fast (<5s suite)",
    "integration: end-to-end / multi-module tests — may use mocked LLM",
    "llm: requires actual LLM call (CS_ENABLE_LLM_RUNTIME=1 + OPENAI_API_KEY) — opt-in only",
    "slow: tests that take >1s individually",
]
addopts = "-ra --strict-markers"
